<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pleasure2cu.promillrechner.Promillrechner">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fuenfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/null_zahl"
                android:inputType="numberDecimal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/gewicht"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/bierProzent" />

            <EditText
                android:id="@+id/farbigProzent"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/string_20"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bierProzent" />

            <EditText
                android:id="@+id/bierProzent"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/string_5"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/zwanziger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/null_zahl"
                android:inputType="numberDecimal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/gewicht"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/farbigProzent" />

            <EditText
                android:id="@+id/purProzent"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/string_40"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/farbigProzent" />

            <TextView
                android:id="@+id/textViewMannPMHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/null_zahl"
                app:layout_constraintLeft_toRightOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/high_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textViewFrauPMLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_zahl"
                app:layout_constraintLeft_toLeftOf="@+id/textViewFrauPMAvg"
                app:layout_constraintTop_toTopOf="@+id/textViewMannPMLow" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/zeit_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purProzent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/low_string"
                app:layout_constraintLeft_toLeftOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/avg_string"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="computeBloodAlc"
                android:text="@string/berechnen_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zeit" />

            <TextView
                android:id="@+id/textViewMannPMAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_zahl"
                app:layout_constraintLeft_toLeftOf="@+id/textViewMannPMHigh"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frau_string"
                app:layout_constraintLeft_toLeftOf="@+id/textViewFrauPMHigh"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="20dp" />

            <EditText
                android:id="@+id/gewicht"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/kilogramm_string"
                android:inputType="numberDecimal"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@+id/textView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vierziger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/null_zahl"
                android:inputType="numberDecimal"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/gewicht"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/purProzent" />

            <EditText
                android:id="@+id/zeit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/stunden_string"
                android:inputType="numberDecimal"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@+id/vierziger"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/mann_string"
                app:layout_constraintLeft_toLeftOf="@+id/textViewMannPMHigh"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textViewFrauPMAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_zahl"
                app:layout_constraintLeft_toLeftOf="@+id/textViewFrauPMHigh"
                app:layout_constraintTop_toTopOf="@+id/textViewMannPMAvg" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/gewicht_string"
                app:layout_constraintBaseline_toBaselineOf="@+id/gewicht"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/textViewFrauPMHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_marginStart="56dp"
                android:text="@string/null_zahl"
                app:layout_constraintLeft_toRightOf="@+id/textViewMannPMHigh"
                app:layout_constraintTop_toTopOf="@+id/textViewMannPMHigh" />

            <TextView
                android:id="@+id/textViewMannPMLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_zahl"
                app:layout_constraintLeft_toLeftOf="@+id/textViewMannPMAvg"
                app:layout_constraintTop_toTopOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/menge_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
